feat(ai): integrate A* pathfinding and Q-learning autoplay agents (v2.0.0 cyberserpent)